Show workarounds for split packages